# flatten-dict

./: .editorconfig  .gitignore  .pylintrc  .travis.yml  LICENSE  Pipfile  README.rst  build.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  main.yml  release.yml
flatten_dict/: __init__.py  flatten_dict.py  reducer.py  splitter.py  tests.py
flatten_dict/tests/: flatten_dict_test.py
src/flatten_dict/: __init__.py  flatten_dict.py  key_types.py  reducer.py  reducers.py  splitter.py  splitters.py
src/flatten_dict/tests/: flatten_dict_test.py
