[tool.poetry]
name = "flatten-dict"
version = "0.4.2"
description = "A flexible utility for flattening and unflattening dict-like objects in Python."
authors = ["Ian Lin <you@example.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/ianlini/flatten-dict"
homepage = "https://github.com/ianlini/flatten-dict"
classifiers = [
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
six = "^1.12"
pathlib2 = { version = "^2.3", python = "<3.4" }
importlib-metadata = {version = "*", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = { version = "^6.0", python = "^3.8" }
flake8 = { version = "^3.8", python = "^3.8" }
pep8-naming = { version = "^0.12.0", python = "^3.8"}
flake8-import-order = { version = "^0.18.1", python = "^3.8"}
flake8-bugbear = { version = "^21.4.0", python = "^3.8"}
flake8-comprehensions = { version = "^3.2.3", python = "^3.8"}
flake8-docstrings = { version = "^1.5.0", python = "^3.8"}
flake8-logging-format = { version = "^0.6.0", python = "^3.8"}
flake8-return = { version = "^1.1.2", python = "^3.8"}
flake8-black = { version = "^0.2.1", python = "^3.8"}
tox = { version = "^3.19", python = "^3.8" }
coverage = { version = "^5.2", python = "^3.8" }
black = { version = "= 21.7b0", python = "^3.8" }
rstcheck = { version = "^3.3.1", python = "^3.8" }
docutils = { version = "^0.17", python = "^3.8" }
ipython = { version = "^7.26.0", python = "^3.8" }

[tool.black]
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \.svn
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
