[tool.poetry]
name = "flatten-dict"
version = "0.4.3"
description = "A flexible utility for flattening and unflattening dict-like objects in Python."
authors = ["Ian Lin <you@example.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/ianlini/flatten-dict"
homepage = "https://github.com/ianlini/flatten-dict"
classifiers = [
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.black]
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \.svn
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "pytest (>=6.0,<7.0)",
    "tox (>=3.19,<4.0)",
    "coverage (>=6.0,<7.0)",
    "black (>=22,<23)",
    "docutils (>=0.19,<0.20)",
    "rstcheck (>=3.3,<4.0)",
    "ipython (>=7.26,<8.0)"
]

[tool.ruff]
extend-exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "*.pyc",
    "*.egg-info",
    ".cache",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "F", # flake8
    "C90", # mccabe
    "E", "W", # pycodestyle
    "N8", # pep8-naming
    "I", # import-order
    "B", # bugbear
    "C4", # comprehensions
    "D", # docstrings
    "G", # logging-format
    "RET", # return
]
ignore = [
    # E203: whitespace before ':'
    # ignore this because it violates PEP8 (https://github.com/PyCQA/pycodestyle/issues/373)
    "E203",
    # E722: do not use bare except, specify exception instead
    # replaced by B001
    "E722",
    # N802: function name should be lowercase
    # uppercase is acceptable for matrix names
    "N802",
    # N803: argument name should be lowercase
    # uppercase is acceptable for matrix names
    "N803",
    # N806: variable in function should be lowercase
    # uppercase is acceptable for matrix names
    "N806",
    # N812: lowercase imported as non lowercase
    # this is for `import torch.nn.functional as F`
    "N812",
    # C401: Unnecessary generator - rewrite as a set comprehension.
    # we accept `set(x for x in iterable)` because it's clearer than `{x for x in iterable}`
    # and is consistent with empty set `set()` (`{}` is empty dict)
    "C401",
    # ignore all D10 codes because we are not foracing people to write docstring
    # D100: Missing docstring in public module
    "D100",
    # D101: Missing docstring in public class
    "D101",
    # D102: Missing docstring in public method
    "D102",
    # D103: Missing docstring in public function
    "D103",
    # D104: Missing docstring in public package
    "D104",
    # D105: Missing docstring in magic method
    "D105",
    # D106: Missing docstring in public nested class
    "D106",
    # D107: Missing docstring in __init__
    "D107",
    # RET504: you shouldn`t assign value to variable if it will be use only as return value
    "RET504",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pycodestyle]
max-line-length = 99

[tool.ruff.lint.pydocstyle]
convention = "numpy"
